[package]
name = "drone_controller"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autodefault = "2.0.0"
bevy = "0.8.1"
bevy_prototype_debug_lines = "0.8"
bevy-inspector-egui = "0.13.0"
bevy_prototype_lyon = "0.6.0"
bevy_rapier2d = { version = "0.16.2", features = [ "simd-stable", "debug-render" ] }
iyes_loopless = "0.7.1"
lazy_static = "1.4.0"

[profile.dev.package.bevy_rapier3d]
opt-level = 3